--- a/templates/alumnos.html
+++ b/templates/alumnos.html
@@ -16,4 +16,9 @@
 <h2>Nombre: {{ nom }}</h2>
 <h2>Apellido: {{ ape }}</h2>
 <h2>Email: {{ em }}</h2>
+
+<form action="/get_cookie" method="get" novalidate>
+  <button type="submit" class="btn btn-secondary">Ver Cookie</button>
+</form>
+
 {% endblock %}
